# LG_Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  report_정상이지만_관리가필요한데이터.md  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_llm_report.py
backend/data/: DPS_columns.json  NODPS_columns.json  trip_case.json
backend/src/: baseline_analyzer.py  baseline_manager.py  chart_viewer.py  column_mapper.py  config.py  db_manager.py  file_parser.py  llm_report.py  rag_engine.py  result_builder.py  rule_manager.py  trip_analyzer.py  verdict_engine.py
docs/: README.md  backend_spec.md  frontend_spec.md  functional_spec.md  git_workflow.md  ollama_setup.md  roadmap.md  todo_next.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  context.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  tabs.tsx
frontend/src/lib/: api.ts  mock.ts  parseFile.ts
frontend/src/pages/: EngineerAdmin.tsx  History.tsx  Report.tsx  UserAnalysis.tsx
pages/: engineer_admin.py  history.py  report.py  user_analysis.py
prompts/: report_prompt.txt
src/: baseline_analyzer.py  config.py  data_quality_checker.py  file_parser.py  prompt_manager.py  rag_engine.py  report_generator.py  result_builder.py
