[project]
name = "lg-project-backend"
version = "0.1.0"
description = "LG Comp 확인 에이전트 백엔드 (FastAPI + Qwen). LGE Internal"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API 서버
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",   # 파일 업로드
    # 데이터 처리
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    # DB
    "SQLAlchemy>=2.0",
    # RAG (로컬 벡터DB + 로컬 임베딩)
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # LLM (Qwen, OpenAI 호환 엔드포인트 호출)
    "httpx>=0.27",
    "openai>=1.40",              # Qwen OpenAI 호환 API 클라이언트
    # 리포트 생성
    "jinja2>=3.1",
    "weasyprint>=62",
    # 설정
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["ruff>=0.6", "pytest>=8.0", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"
